--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-SERVICE_ID = service_1duliyr
-TEMPLATE_ID = template_eouiv9h
-PUBLIC_KEY = ihlcJRL99PQXjzRjZ
+VITE_SERVICE_ID = service_1duliyr
+VITE_TEMPLATE_ID = template_eouiv9h
+VITE_PUBLIC_KEY = ihlcJRL99PQXjzRjZ
